refactor: dpurrr (optional) section (#19)
* get "filter" working

* implement dpurrr mutate

* redo filter for penguins

* work on intro message

* update mutate

* update helpers and "mutate"

* start on summarise-with-grouping

* get first-pass working for "split"

* fix titles

* get summarise working with grouping

* fix ending

--- a/styles.scss
+++ b/styles.scss
@@ -14,3 +14,36 @@ code.sourceCode {
   font-size: 1.3em;
 }
 
+.opacity-00 {
+  opacity: 0%;
+}
+
+.opacity-33 {
+  opacity: 33%;
+}
+
+.opacity-67 {
+  opacity: 67%;
+}
+
+.border {
+  border: solid #777;
+  border-radius: 8px;
+}
+
+.margin-4 {
+  margin: 4px;
+}
+
+.padding-4 {
+  padding: 4px;
+}
+
+.height-auto {
+  height: auto;
+}
+
+.display-flex {
+  // ovverride quarto's use of 'display: initial;' for div.columns
+  display: flex !important; 
+}
